--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,17 @@
 <resources>
     <string name="app_name">PacmanKotlin</string>
     <string name="points">Points:</string>
-    <string name="move_right">Move Rigth</string>
+    <string name="move_right">Right</string>
     <string name="action_settings">Settings</string>
     <string name="newgame">New Game</string>
-    <string name="move_left">move left</string>
-    <string name="move_up">Move Up</string>
-    <string name="move_down">Move Down</string>
+    <string name="move_left">Left</string>
+    <string name="move_up">Up</string>
+    <string name="move_down">Down</string>
+    <string name="reset">Reset</string>
+    <string name="continueLabel">Continue</string>
+    <string name="continueButton">continue</string>
+    <string name="pause">Pause</string>
+    <string name="timer_value">Timer value:</string>
+    <string name="timer">Timer</string>
+    <string name="nextLevel">Next Level</string>
 </resources>
